# hexagonal-adk-ai-agent

./: .gitignore  README.md
0/: .env.example  Dockerfile  Procfile  README.md  __main__.py  agent_executor.py  cloudbuild.yaml.example  config.py  pyproject.toml  requirements.txt
0/marketing_image_agent/: .env.example  agent.py
0/media/: diagram.yaml
1/: .env.example  README.md  __main__.py  (+4 more)
2/: .env.example  README.md  __main__.py  agent_executor.py  config copy.py  config.py  config.yaml  config.yaml.example  pyproject.toml  requirements.txt
2/marketing_image_agent/: agent copy.py  agent.py  tools.py
2/marketing_image_agent/application/command_handlers/: approve_marketing_image_command_handler.py  base_command_handler.py  change_marketing_image_metadata_command_handler.py  generate_marketing_image_command_handler.py  reject_marketing_image_command_handler.py  remove_marketing_image_command_handler.py
2/marketing_image_agent/application/command_objects/: accept_marketing_image_command.py  approve_marketing_image_command.py  base_command_object.py  change_marketing_image_metadata_command.py  edit_marketing_image_command.py  generate_marketing_image_command.py  modify_marketing_image_command.py  reject_marketing_image_command.py  remove_marketing_image_command.py  update_marketing_image_metadata_command.py
2/marketing_image_agent/application/domain_event_handlers/: base_domain_event_handler.py  marketing_image_approved_domain_event_handler.py  marketing_image_generated_domain_event_handler.py  marketing_image_metadata_changed_domain_event_handler.py  marketing_image_rejected_domain_event_handler.py  marketing_image_removed_domain_event_handler.py
2/marketing_image_agent/shared/: utils.py
2/media/: diagram.yaml
(+87 files in other folders)
