[project]
name = "marketing-creative-agent"
version = "0.1.0"
description = "An AI Agent within the Marketing domain of a Supermarket Retailer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.7",
    "asyncio>=4.0.0",
    "google-adk>=1.15.1",
    "google-cloud-storage>=2.19.0",
    "google-genai>=1.40.0",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.1",
    "jwcrypto>=1.5.6",
    "pillow>=11.3.0",
    "pydantic>=2.11.9",
    "pyjwt>=2.10.1",
    "python-a2a>=0.5.10",
    "python-dotenv>=1.1.1",
    "sse-starlette>=3.0.2",
    "starlette>=0.48.0",
    "typing-extensions>=4.15.0",
    "uv>=0.4.1",
    "uvicorn>=0.35.0",
]

[tool.uv.workspace]
members = []

[dependency-groups]
dev = [ "ruff>=0.13.2", "ty>=0.0.1a21" ]