[project]
name = "marketing-creative-agent"
version = "0.1.0"
description = "An AI Agent within the Marketing domain of a Supermarket Retailer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.7",
    "asyncio>=3.4.3",
    "dependency-injector>=4.48.1",
    "google-adk>=1.7.0",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-storage>=2.19.0",
    "google-genai>=1.26.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.1",
    "jwcrypto>=1.5.6",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "python-a2a>=0.5.9",
    "python-dotenv>=1.1.1",
    "sse-starlette>=2.4.1",
    "starlette>=0.47.1",
    "typing-extensions>=4.14.1",
    "uvicorn>=0.35.0",
]

[tool.uv.workspace]
members = []

[dependency-groups]
dev = [
    "ruff>=0.12.4",
    "ty>=0.0.1a15",
]
